feat: add image to memory; add memory created screen.
- feat: delete image on memory deletion.

--- a/src/scss/components/buttons/_button.scss
+++ b/src/scss/components/buttons/_button.scss
@@ -28,7 +28,9 @@
 	}
 
 	&:hover {
-		background-color: $bg-primary-hover
+		@media (min-width: $xl) {
+			background-color: $bg-primary-hover
+		}
 	}
 
 	&:active {
