--- a/src/scss/components/vars/_fonts.scss
+++ b/src/scss/components/vars/_fonts.scss
@@ -2,6 +2,7 @@ $ff			: 'Grafita-Normal', Arial, sans-serif;
 $ff-title	: 'Calvino Grande', Arial, sans-serif;
 
 $fs-xs		: 12px;
+$fs-xs-alt	: 13px;
 $fs-sm		: 14px;
 $fs-sm-alt	: 15px;
 $fs-md		: 16px;
