--- a/src/scss/components/buttons/_menu.scss
+++ b/src/scss/components/buttons/_menu.scss
@@ -20,8 +20,10 @@
 	}
 
 	&:hover {
-		background-color: $bg-primary-on-color-hover;
-		border-color: $bg-primary-on-color-hover
+		@media (min-width: $xl) {
+			background-color: $bg-primary-on-color-hover;
+			border-color: $bg-primary-on-color-hover
+		}
 	}
 
 	&:active {
