--- a/src/scss/components/buttons/_outlined.scss
+++ b/src/scss/components/buttons/_outlined.scss
@@ -7,7 +7,9 @@
 	}
 
 	&:hover {
-		background-color: $bg-primary-hover
+		@media (min-width: $xl) {
+			background-color: $bg-primary-hover
+		}
 	}
 
 	&:active {
