--- a/src/scss/components/memory/preview.scss
+++ b/src/scss/components/memory/preview.scss
@@ -1,3 +1,5 @@
+@import '../helpers';
+
 .memory-preview {
 	width: 100%;
 	padding: 24px 30px 42px;
@@ -47,7 +49,9 @@
 	&-thumb {
 		width: 80px;
 		height: 80px;
-		margin-top: 24px;
+		margin: 24px 0 8px;
+		cursor: pointer;
+		@include hover-opacity;
 
 		img {
 			width: 100%;
