--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,6 +12,7 @@
 @import 'components/buttons';
 @import 'components/notifications';
 @import 'components/switcher/switcher';
+@import 'components/popup/popup';
 
 // Theme common styles.
 @import 'header/header';
