--- a/src/scss/pages/profile.scss
+++ b/src/scss/pages/profile.scss
@@ -15,7 +15,8 @@
 .profile {
 	height: 100%;
 
-	&-body {
+	&-body,
+	.expand-page {
 		width: 100%;
 		padding: 16px;
 
@@ -208,10 +209,6 @@
 		border-radius: 0;
 		cursor: pointer;
 
-		@media (min-width: $xl) {
-			display: none
-		}
-
 		svg {
 			display: block;
 			width: 14px;
@@ -312,176 +309,53 @@
 	}
 }
 
-.popup {
-	display: flex;
-	padding: 100px $container-padding;
-	justify-content: center;
-	align-items: flex-start;
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	z-index: 100;
-	background-color: rgba(0, 0, 0, 0.81);
-	cursor: pointer;
-	overflow-y: auto;
+.expand-page {
+	.profile-memories-title {
+		flex-direction: column;
+		align-items: flex-start;
 
-	&-inner {
-		position: relative;
-		width: 100%;
-		max-width: 572px;
-		background-color: $white;
-		border-radius: $radius-theme;
-		overflow: hidden;
-		cursor: auto;
-		padding: 30px;
-		margin: auto 0
-	}
-
-	&-close {
-		position: absolute;
-		top: 30px;
-		right: 30px;
-		display: block;
-		width: 16px;
-		height: 16px;
-		border: none;
-		background-color: transparent;
-		padding: 0;
-		cursor: pointer;
-		transition: opacity ease-out $tr;
-
-		&:hover {
-			opacity: 0.7
+		&-buttons {
+			order: 1
 		}
 
-		svg {
-			pointer-events: none
+		&-text {
+			order: 2;
+			margin-bottom: 17px
 		}
 	}
 
-	&-header {
-		padding-bottom: 30px;
-		border-bottom: 1px solid #8FB7C5;
+	.profile-breadcrumbs {
+		order: 3;
+		font-family: $ff;
+		font-size: $fs-xs-alt;
+		line-height: $lh-fs-13;
+		font-weight: $fw-regular;
+		color: $text-primary;
 
-		&-thumb {
+		a {
+			color: $text-secondary;
+
+			&:hover {
+				color: $text-primary
+			}
+		}
+
+		> *:not(:last-child) {
 			position: relative;
-			width: 70px;
-			height: 90px;
-			border-radius: 35px;
-			overflow: hidden;
-			background-color: $green;
+			margin-right: 19px;
 
 			&::after {
 				content: '';
 				position: absolute;
-				top: 0;
-				left: 0;
-				width: 100%;
-				height: 100%;
-				background: linear-gradient( 2deg, $very-dark-green 0%, rgba(1, 28, 26, 0.00) 100%), transparent 50%
-			}
-
-			img {
-				width: 100%;
-				height: 100%;
-				object-fit: cover
+				top: 50%;
+				left: 100%;
+				transform: translate(8px, -1px);
+				display: block;
+				width: 3px;
+				height: 3px;
+				border-radius: 50%;
+				background-color: $text-secondary
 			}
 		}
-
-		&-info {
-			width: calc(100% - 70px);	// Minus thumb width.
-			padding-left: 20px
-		}
-	}
-
-	&-name {
-		width: 100%;
-		font-family: $ff-title;
-		font-size: $fs-lg;
-		font-weight: $fw-semibold;
-		color: $very-dark-green
-	}
-
-	&-dates {
-		width: 100%;
-		font-family: $ff-title;
-		font-size: $fs-sm;
-		line-height: 1.6;
-		font-weight: $fw-regular;
-		color: $dark-yellow;
-		margin-top: 2px
-	}
-
-	&-features {
-		margin-top: 20px;
-
-		&-title {
-			font-family: $ff-title;
-			font-size: 24px;
-			color: $very-dark-green;
-			margin-bottom: 12px
-		}
-
-		&-list {
-			gap: 8px;
-			margin-bottom: 30px
-		}
-	}
-
-	&-feature {
-		font-size: $fs-sm;
-		line-height: 2.21;
-		color: $very-dark-green;
-		padding: 0 12px;
-		background-color: $a-bit-blue-white;
-		border-radius: $radius-theme;
-
-		&.highlighted {
-			background-color: #E6FFF6
-		}
-	}
-
-	&-promo {
-		margin-bottom: 30px;
-
-		label {
-			width: calc(100% - 174px)
-		}
-
-		button {
-			margin: 4px 0 0 auto
-		}
-	}
-
-	&-total {
-		margin-bottom: 26px;
-
-		&-row {
-			&:not(:last-child) {
-				margin-bottom: 12px
-			}
-
-			&.final {
-				.popup-total-text,
-				.popup-total-price {
-					color: $dark-yellow
-				}
-			}
-		}
-
-		&-text {
-			color: #344948
-		}
-
-		&-price {
-			color: $very-dark-green;
-			margin-left: auto
-		}
-	}
-
-	&-image img {
-		max-width: 80%
 	}
 }
