feat: add memories to the memory page.
- feat: add read more logic.

--- a/src/scss/components/base.scss
+++ b/src/scss/components/base.scss
@@ -53,3 +53,14 @@ ul {
 		margin-top: auto
 	}
 }
+
+.read-more {
+	color: $accent;
+	cursor: pointer;
+	margin-left: 3px;
+	transition: color ease-out $tr;
+
+	&:hover {
+		color: $accent-bright
+	}
+}
