fix: classic memory card styles.

--- a/src/scss/components/cards/memory-page/_thumb.scss
+++ b/src/scss/components/cards/memory-page/_thumb.scss
@@ -26,6 +26,7 @@
 		}
 
 		&-img {
+			width: 100%;
 			border-radius: $rad-memory-card-thumb;
 			overflow: hidden
 		}
@@ -39,7 +40,7 @@
 		}
 	}
 
-	&.green .memory-card-thumb::after {
+	&.classic .memory-card-thumb::after {
 		background: $card-overlay-green
 	}
 
