--- a/src/scss/components/vars/_borders.scss
+++ b/src/scss/components/vars/_borders.scss
@@ -3,4 +3,5 @@ $rad-switch				: 8px;
 $rad-btn				: 10px;
 $rad-input				: 12px;
 $rad-memory-page-card	: 30px;
+$rad-form-fieldset		: 32px;
 $rad-memory-card-thumb	: 120px;
