feat: expand page layout is ready.

--- a/src/scss/components/vars/_borders.scss
+++ b/src/scss/components/vars/_borders.scss
@@ -4,4 +4,5 @@ $rad-btn				: 10px;
 $rad-input				: 12px;
 $rad-memory-page-card	: 30px;
 $rad-form-fieldset		: 32px;
+$rad-advantage			: 40px;
 $rad-memory-card-thumb	: 120px;
