--- a/src/scss/components/vars/_colors.scss
+++ b/src/scss/components/vars/_colors.scss
@@ -13,6 +13,7 @@ $border-primary-on-color	: rgba(195, 218, 226, 0.24);
 $border-primary-hover		: rgba(5, 51, 48, 0.85);
 $border-danger				: rgba(247, 65, 65, 0.60);
 
+$bg-accent-subdued-hover	: rgba(247, 185, 65, 0.12);
 $bg-secondary				: #011C1A;
 $bg-primary					: #F7FAFC;
 $bg-primary-hover			: $border-primary-on-color;
