--- a/src/scss/pages/profile.scss
+++ b/src/scss/pages/profile.scss
@@ -360,30 +360,54 @@
 	}
 
 	&-form {
-		column-gap: 22px;
+		flex-wrap: wrap;
+		gap: 20px 22px;
+
+		@media (min-width: $lg) {
+			flex-wrap: nowrap
+		}
+
+		&-left,
+		&-right {
+			width: 100%;
+			max-width: 514px
+		}
 
 		&-left {
-			width: 554px;
-			flex-grow: 1
+			@media (min-width: $lg) {
+				max-width: 554px
+			}
 		}
 
 		&-right {
-			width: 404px;
-			flex-grow: 1
+			@media (min-width: $lg) {
+				max-width: 404px
+			}
 		}
 
 		fieldset {
-			padding: 24px;
+			padding: 16px;
 			margin-bottom: 20px;
 			background-color: $white;
 			border-radius: $rad-form-fieldset;
 
+			@media (min-width: $lg) {
+				padding: 24px
+			}
+
 			&:last-child {
 				margin-bottom: 0
 			}
+
+			&.qr-wrap {
+				padding: 0;
+				overflow: hidden;
+				margin-bottom: 24px
+			}
 		}
 
-		legend {
+		legend,
+		.legend {
 			width: 100%;
 			font-family: $ff-title;
 			font-size: 24px;
@@ -395,8 +419,112 @@
 			float: left;
 
 			svg {
-				margin-left: 20px
+				display: block;
+				width: 20px;
+				height: 20px;
+				margin-left: 2px;
+				transform: translateY(3px);
+
+				@media (min-width: $md) {
+					width: 30px;
+					height: 30px;
+					margin-left: 15px;
+					transform: translateY(7px)
+				}
 			}
 		}
+	}
+}
+
+.advantages {
+	gap: 8px;
+
+	&:not(.pro) {
+		border-bottom: 1px solid $border-primary-on-color;
+		padding-bottom: 16px;
+		margin-bottom: 16px
+	}
+
+	&-header {
+		column-gap: 16px;
+		margin-bottom: 16px;
+
+		@media (min-width: $lg) {
+			column-gap: 24px
+		}
+
+		&-img {
+			width: 80px;
+			height: 92px;
+
+			img {
+				display: block;
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+				border-radius: 100%
+			}
+		}
+
+		&-title {
+			width: calc(100% - 96px);
+			font-size: 24px;
+			line-height: $lh-mobile-title-special-lg;
+			padding-right: 25px;
+
+			@media (min-width: $lg) {
+				width: calc(100% - 104px);
+				padding-right: 54px
+			}
+		}
+	}
+}
+
+.qr-image {
+	position: relative;
+	width: 107px;
+	height: inherit;
+
+	@media (min-width: $lg) {
+		width: 131px
+	}
+
+	img {
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		display: block;
+		width: 100%;
+		height: 100%;
+		object-fit: cover
+	}
+}
+
+.qr-body {
+	width: calc(100% - 131px);
+	padding: 24px 24px 24px 21px;
+
+	@media (min-width: $lg) {
+		width: calc(100% - 150px);
+		padding-left: 19px
+	}
+}
+
+.qr-title {
+	font-size: 24px;
+	margin-bottom: 12px;
+	line-height: $lh-3
+}
+
+.qr-desc {
+	font-size: $fs-sm-alt;
+	line-height: $lh-tags-special
+}
+
+.qr-count {
+	margin-bottom: 24px;
+
+	&-qty {
+		margin: 0 20px
 	}
 }
