upd: add loader on NP API request.

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,7 +6,7 @@
 @import 'components/typography';
 
 // Theme base styles.
-@import 'components/base';
+@import 'components/base/base';
 @import 'components/forms';
 @import 'components/inputs/inputs';
 @import 'components/buttons';
