--- a/src/scss/pages/profile.scss
+++ b/src/scss/pages/profile.scss
@@ -309,7 +309,43 @@
 	}
 }
 
-.expand-page {
+.profile-breadcrumbs {
+	order: 3;
+	font-family: $ff;
+	font-size: $fs-xs-alt;
+	line-height: $lh-fs-13;
+	font-weight: $fw-regular;
+	color: $text-primary;
+
+	a {
+		color: $text-secondary;
+
+		&:hover {
+			color: $text-primary
+		}
+	}
+
+	> *:not(:last-child) {
+		position: relative;
+		margin-right: 19px;
+
+		&::after {
+			content: '';
+			position: absolute;
+			top: 50%;
+			left: 100%;
+			transform: translate(8px, -1px);
+			display: block;
+			width: 3px;
+			height: 3px;
+			border-radius: 50%;
+			background-color: $text-secondary
+		}
+	}
+}
+
+.expand-page,
+.order-created {
 	.profile-memories-title {
 		flex-direction: column;
 		align-items: flex-start;
@@ -323,39 +359,20 @@
 			margin-bottom: 17px
 		}
 	}
+}
 
-	.profile-breadcrumbs {
-		order: 3;
-		font-family: $ff;
-		font-size: $fs-xs-alt;
-		line-height: $lh-fs-13;
-		font-weight: $fw-regular;
-		color: $text-primary;
+.expand-page {
+	.profile-memories-title {
+		flex-direction: column;
+		align-items: flex-start;
 
-		a {
-			color: $text-secondary;
-
-			&:hover {
-				color: $text-primary
-			}
+		&-buttons {
+			order: 1
 		}
 
-		> *:not(:last-child) {
-			position: relative;
-			margin-right: 19px;
-
-			&::after {
-				content: '';
-				position: absolute;
-				top: 50%;
-				left: 100%;
-				transform: translate(8px, -1px);
-				display: block;
-				width: 3px;
-				height: 3px;
-				border-radius: 50%;
-				background-color: $text-secondary
-			}
+		&-text {
+			order: 2;
+			margin-bottom: 17px
 		}
 	}
 
