feat: add military step 2 and 3 (no rewards 1st screen).

--- a/src/scss/components/vars.scss
+++ b/src/scss/components/vars.scss
@@ -30,6 +30,7 @@ $a-bit-blue-white	: #F7FAFC;
 // Colors - Grayscale.
 $black-for-text		: #2D2D2D;
 $dark-green			: #2D4443;
+$dark-green			: #2D4443;
 $deep-green			: #052422;
 $green				: #7E969B;
 $light-green		: #C3DAE2;
