--- a/src/scss/pages/new-memory.scss
+++ b/src/scss/pages/new-memory.scss
@@ -330,3 +330,137 @@
 	color: $icon-disabled;
 	text-align: center
 }
+
+.rewards-main-wrap {
+	max-width: 100%;
+	padding: 0 32px 32px 0;
+	margin-top: 0
+}
+
+.rewards-sidebar {
+	position: relative;
+	width: 413px;
+	padding-top: 24px;
+
+	&-breadcrumbs {
+		gap: 19px;
+		margin-bottom: 20px;
+
+		span {
+			font-size: $fs-xs-alt;
+			line-height: $lh-fs-13;
+			color: $text-secondary;
+
+			&.active {
+				color: $text-primary
+			}
+
+			&:first-child {
+				position: relative;
+
+				&::after {
+					content: '';
+					position: absolute;
+					top: 50%;
+					left: calc(100% + 8px);
+					display: block;
+					width: 3px;
+					height: 3px;
+					border-radius: 50%;
+					background-color: $text-secondary
+				}
+			}
+		}
+	}
+}
+
+.rewards-search {
+	margin-bottom: 16px
+}
+
+.rewards-types {
+	margin-bottom: 76px;
+
+	.button {
+		justify-content: space-between
+	}
+}
+
+.rewards-area {
+	width: calc(100% - 413px);
+	padding: 62px 0 0 21px;
+
+	h4 {
+		margin-bottom: 16px
+	}
+}
+
+.rewards-list {
+	gap: 16px;
+
+	@media (min-width: $xl) {
+		gap: 16px 12px
+	}
+
+	&:not(:last-child) {
+		margin-bottom: 24px
+	}
+}
+
+.reward-preview {
+	width: 100%;
+	max-width: calc(50% - 8px);
+	gap: 10px;
+	background-color: $white;
+	border: 1px solid $border-primary;
+	border-radius: $rad-reward;
+	padding: 9px 13px 19px;
+	cursor: pointer;
+	transition: border-color ease-out $tr;
+
+	@media (min-width: $md) {
+		max-width: calc((100% - 48px) / 4)
+	}
+
+	@media (min-width: $xl) {
+		max-width: calc((100% - 48px) / 5);
+		padding: 9px 15px 13px
+	}
+
+	&-thumb {
+		width: 115px;
+		height: 115px;
+
+		img {
+			display: block;
+			width: 100%;
+			height: 100%;
+			object-fit: cover
+		}
+	}
+
+	&-title {
+		font-size: $fs-md;
+		line-height: 19px;
+		text-align: center;
+		opacity: 0.8;
+		transition: color ease-out $tr;
+
+		@media (min-width: $xl) {
+			font-size: 11px;
+			line-height: 13px
+		}
+	}
+
+	&:hover {
+		border-color: $text-accent;
+
+		.reward-preview-title {
+			color: $text-accent
+		}
+	}
+
+	&.active {
+		border-color: $text-accent
+	}
+}
