--- a/src/scss/pages/new-memory.scss
+++ b/src/scss/pages/new-memory.scss
@@ -297,132 +297,6 @@
 }
 
 ////////////////////////
-.new-memory-step-3-military {
-	.new-memory-step-title .button {
-		display: none;
-		margin: 7px 0 0 24px
-	}
-}
-
-.no-rewards-body {
-	flex-grow: 1;
-	padding-bottom: 54px;
-
-	.button {
-		margin-top: 24px
-	}
-}
-
-.no-rewards-img {
-	width: 100%;
-	max-width: 298px;
-	margin-bottom: 12px;
-
-	img {
-		display: block;
-		width: 100%
-	}
-}
-
-.no-rewards-text {
-	font-style: $fs-sm;
-	line-height: normal;
-	color: $icon-disabled;
-	text-align: center
-}
-
-.rewards-main-wrap {
-	position: relative;
-	max-width: 100%;
-	padding: 0 32px 32px 0;
-	margin-top: 0
-}
-
-.rewards-sidebar {
-	position: relative;
-	width: 413px;
-	padding-top: 24px;
-
-	&-breadcrumbs {
-		gap: 19px;
-		margin-bottom: 20px;
-
-		span {
-			font-size: $fs-xs-alt;
-			line-height: $lh-fs-13;
-			color: $text-secondary;
-
-			&.active {
-				color: $text-primary
-			}
-
-			&:first-child {
-				position: relative;
-
-				&::after {
-					content: '';
-					position: absolute;
-					top: 50%;
-					left: calc(100% + 8px);
-					display: block;
-					width: 3px;
-					height: 3px;
-					border-radius: 50%;
-					background-color: $text-secondary
-				}
-			}
-		}
-	}
-}
-
-.rewards-search {
-	margin-bottom: 16px
-}
-
-.rewards-types {
-	margin-bottom: 76px;
-
-	.button {
-		justify-content: space-between;
-
-		&.active {
-			background-color: $bg-primary-hover
-		}
-
-		span {
-			text-align: left
-		}
-	}
-}
-
-.rewards-area {
-	position: relative;
-	width: calc(100% - 413px);
-	padding: 62px 0 0 21px;
-
-	h4 {
-		margin-bottom: 16px
-	}
-
-	.tmp-loader {
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%)
-	}
-}
-
-.rewards-list {
-	gap: 16px;
-
-	@media (min-width: $xl) {
-		gap: 16px 12px
-	}
-
-	&:not(:last-child) {
-		margin-bottom: 24px
-	}
-}
 
 .reward-preview {
 	width: 100%;
@@ -455,7 +329,8 @@
 		img {
 			display: block;
 			width: auto;
-			height: 100%
+			height: 100%;
+			object-fit: contain
 		}
 	}
 
@@ -472,11 +347,48 @@
 		}
 	}
 
+	&-actions {
+		position: absolute;
+		top: 20px;
+		right: 20px;
+		column-gap: 6px;
+
+		&:not(.active) {
+			@media (min-width: $xl) {
+				transition: opacity ease-out $tr;
+				opacity: 0
+			}
+		}
+
+		.button {
+			pointer-events: auto
+		}
+	}
+
+	&.full {
+		position: relative;
+		max-width: 305px;
+		padding: 60px 43px 36px;
+
+		.reward-preview-thumb {
+			height: 217px
+		}
+
+		.reward-preview-title {
+			font-size: $fs-xl;
+			line-height: $lh-base
+		}
+	}
+
 	&:hover {
 		border-color: $text-accent;
 
 		.reward-preview-title {
 			color: $text-accent
+		}
+
+		.reward-preview-actions {
+			opacity: 1
 		}
 	}
 
@@ -565,4 +477,9 @@
 			transform: rotate(180deg)
 		}
 	}
+}
+
+.has-rewards {
+	max-width: 100%;
+	gap: 20px
 }
