--- a/src/scss/pages/new-memory.scss
+++ b/src/scss/pages/new-memory.scss
@@ -322,16 +322,24 @@
 		pointer-events: none
 	}
 
+	&-no-reward-thumb,
 	&-thumb {
-		max-width: 100%;
-		height: 115px;
-
 		img {
 			display: block;
 			width: auto;
 			height: 100%;
 			object-fit: contain
 		}
+	}
+
+	&-no-reward-thumb {
+		height: 120px;
+		margin: auto
+	}
+
+	&-thumb {
+		max-width: 100%;
+		height: 115px
 	}
 
 	&-title {
@@ -367,8 +375,11 @@
 
 	&.full {
 		position: relative;
-		max-width: 305px;
 		padding: 60px 43px 36px;
+
+		@media (min-width: $xl) {
+			max-width: calc((100% - 60px) / 4)
+		}
 
 		.reward-preview-thumb {
 			height: 217px
@@ -411,13 +422,26 @@
 		gap: 20px
 	}
 
+	&-preview {
+		max-width: 305px
+	}
+
+	&-custom {
+		font-size: $fs-xs;
+		line-height: $lh-tags-special;
+		margin-top: 12px
+	}
+
 	.reward-preview {
-		max-width: 305px;
+		width: 100%;
+		max-width: 100%;
+		height: 382px;
 		padding: 61px 42px 65px;
 		pointer-events: none;
 
 		&-thumb {
-			height: 217px
+			height: 217px;
+			text-align: center
 		}
 
 		&-title {
@@ -427,11 +451,16 @@
 	}
 
 	&-form {
+		position: relative;
 		width: 100%;
 		max-width: 413px;
 
 		fieldset {
 			flex-grow: 1
+		}
+
+		.checkbox-wrapper {
+			padding: 0
 		}
 
 		&-buttons {
@@ -441,6 +470,13 @@
 			.button[type='submit'] {
 				min-width: 198px
 			}
+		}
+
+		.tmp-loader {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%)
 		}
 	}
 
