feat: Step 2 - add military sections; add photos previews and deletion logic.

--- a/src/scss/components/vars/_colors.scss
+++ b/src/scss/components/vars/_colors.scss
@@ -34,6 +34,8 @@ $text-accent-on-color		: $accent-on-color;
 $text-danger				: #F74141;
 $text-disabled				: $border-primary;
 $M3-sys-light-on-surface	: #1C1B1F;
+$dark-green-400				: rgba(1, 28, 26, 0.4);
+$dark-green-200				: rgba(1, 28, 26, 0.12);
 
 $icon-accent				: $accent;
 $icon-accent-on-color		: $accent-on-color;
