--- a/src/scss/components/vars/_borders.scss
+++ b/src/scss/components/vars/_borders.scss
@@ -3,6 +3,7 @@ $rad-switch				: 8px;
 $rad-btn				: 10px;
 $rad-input				: 12px;
 $rad-reward				: 16px;
+$rad-military-desc		: 16px;
 $rad-memory-page-card	: 30px;
 $rad-form-fieldset		: 32px;
 $rad-advantage			: 40px;
