--- a/src/scss/new-memory/step-3-military.scss
+++ b/src/scss/new-memory/step-3-military.scss
@@ -152,3 +152,316 @@
 		margin-bottom: 24px
 	}
 }
+
+.reward-preview {
+	width: 100%;
+	max-width: calc(50% - 8px);
+	gap: 10px;
+	background-color: $white;
+	border: 1px solid $border-primary;
+	border-radius: $rad-reward;
+	padding: 9px 13px 19px;
+	cursor: pointer;
+	transition: border-color ease-out $tr;
+
+	@media (min-width: $md) {
+		max-width: calc((100% - 48px) / 4)
+	}
+
+	@media (min-width: $xl) {
+		max-width: calc((100% - 48px) / 5);
+		padding: 9px 15px 13px
+	}
+
+	* {
+		pointer-events: none
+	}
+
+	&-no-reward-thumb,
+	&-thumb {
+		img {
+			display: block;
+			width: auto;
+			height: 100%;
+			object-fit: contain
+		}
+	}
+
+	&-no-reward-thumb {
+		height: 115px;
+		margin: auto;
+
+		@media (min-width: $md) {
+			height: 120px
+		}
+	}
+
+	&-thumb {
+		max-width: 100%;
+		height: 115px
+	}
+
+	&-title {
+		font-size: $fs-md;
+		line-height: 19px;
+		text-align: center;
+		opacity: 0.8;
+		transition: color ease-out $tr;
+
+		@media (min-width: $xl) {
+			font-size: 11px;
+			line-height: 13px
+		}
+	}
+
+	&-actions {
+		position: absolute;
+		top: 5px;
+		right: 5px;
+		column-gap: 6px;
+
+		@media (min-width: $xl) {
+			top: 20px;
+			right: 20px
+		}
+
+		&:not(.active) {
+			transition: opacity ease-out $tr;
+			opacity: 0
+		}
+
+		.button {
+			pointer-events: auto
+		}
+	}
+
+	&.full {
+		position: relative;
+		padding: 30px 19px 19px;
+
+		@media (min-width: $md) {
+			max-width: calc((100% - 40px) / 3)
+		}
+
+		@media (min-width: $xl) {
+			max-width: calc((100% - 60px) / 4);
+			padding: 60px 43px 36px
+		}
+
+		.reward-preview-thumb {
+			height: 115px;
+
+			@media (min-width: $xl) {
+				height: 217px
+			}
+		}
+
+		.reward-preview-title {
+			font-size: $fs-md;
+			line-height: $lh-desktop-title-special;
+
+			@media (min-width: $xl) {
+				font-size: $fs-xl;
+				line-height: $lh-base
+			}
+		}
+	}
+
+	&:hover {
+		border-color: $text-accent;
+
+		.reward-preview-title {
+			color: $text-accent
+		}
+
+		.reward-preview-actions {
+			opacity: 1
+		}
+	}
+
+	&.active {
+		border-color: $text-accent
+	}
+}
+
+.reward-popup {
+	position: absolute;
+	top: 60px;
+	left: 0;
+	width: 100%;
+	height: calc(100% - 24px);
+	padding-top: 10px;
+	background-color: $white;
+	z-index: 2;
+
+	@media (min-width: $md) {
+		padding-top: 29px
+	}
+
+	&-inner {
+		gap: 20px
+	}
+
+	&-preview {
+		width: 100%;
+		order: 1;
+
+		@media (min-width: $xl) {
+			max-width: 305px
+		}
+	}
+
+	&-custom {
+		font-size: $fs-xs;
+		line-height: $lh-tags-special;
+		margin-top: 12px
+	}
+
+	.reward-preview {
+		width: 100%;
+		max-width: 164px;
+		min-height: 180px;
+		padding: 9px 24px 13px;
+		margin: 0 auto;
+		pointer-events: none;
+
+		@media (min-width: $md) {
+			margin: 0
+		}
+
+		@media (min-width: $lg) {
+			min-height: 382px;
+			max-width: 100%;
+			padding: 61px 42px 65px
+		}
+
+		&-thumb {
+			height: 217px;
+			text-align: center
+		}
+
+		&-title {
+			font-size: $fs-xl;
+			line-height: $lh-mobile-title-special
+		}
+	}
+
+	&-form {
+		position: relative;
+		width: 100%;
+		max-width: 413px;
+		order: 3;
+
+		@media (min-width: $lg) {
+			order: 2
+		}
+
+		fieldset {
+			flex-grow: 1
+		}
+
+		.checkbox-wrapper {
+			padding: 0
+		}
+
+		&-buttons {
+			gap: 10px;
+			margin-top: 18px;
+
+			.button[type='submit'] {
+				min-width: 198px
+			}
+		}
+
+		.tmp-loader {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			margin: -18px 0 0 -18px
+		}
+	}
+
+	&-text {
+		position: relative;
+		width: 100%;
+		max-width: 221px;
+		align-self: flex-start;
+		font-size: 24px;
+		line-height: $lh-mobile-title-special-lg;
+		color: $military;
+		text-align: center;
+		margin: 30px auto;
+		order: 2;
+
+		@media (min-width: $lg) {
+			max-width: 398px;
+			margin: 65px 0 0 52px;
+			order: 3
+		}
+
+		&::before,
+		&::after {
+			content: '“';
+			position: absolute;
+			font-family: $ff-title;
+			font-size: 48px;
+			line-height: 0;
+			font-weight: $fw-semibold;
+			color: $bg-primary-enhanced;
+
+			@media (min-width: $xl) {
+				font-size: 123px
+			}
+		}
+
+		&::before {
+			top: 0;
+			left: -20px
+		}
+
+		&::after {
+			bottom: 0;
+			right: -20px;
+			transform: rotate(180deg)
+		}
+	}
+}
+
+.has-rewards.form-white {
+	max-width: 100%;
+	gap: 16px;
+
+	@media (min-width: $lg) {
+		gap: 20px
+	}
+}
+
+.rewards-not-found {
+	position: fixed;
+	bottom: 77px;
+	left: 0;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 100%;
+	background-color: $white;
+	padding: 16px 20px;
+	z-index: 1;
+
+	@media (min-width: $md) {
+		flex-direction: row;
+		column-gap: 8px
+	}
+
+	@media (min-width: $lg) {
+		bottom: 84px
+	}
+
+	@media (min-width: $xl) {
+		position: relative;
+		bottom: auto;
+		flex-direction: column;
+		align-items: flex-start;
+		z-index: auto
+	}
+}
