upd: improved step 2 data save.

--- a/src/scss/new-memory/step-0.scss
+++ b/src/scss/new-memory/step-0.scss
@@ -43,7 +43,7 @@
 		&-left {
 			margin-bottom: 29px;
 
-			@media (min-width: $md) {
+			@media (min-width: $lg) {
 				padding-right: 128px;
 				margin-bottom: 0
 			}
