--- a/src/scss/new-memory/step-2.scss
+++ b/src/scss/new-memory/step-2.scss
@@ -23,14 +23,16 @@ body.memory-page-theme-military {
 			}
 
 			button {
-				background-color: transparent;
-				padding: 0;
-				border: none;
-				cursor: pointer;
-				transition: opacity ease-out $tr;
+				&:not(.button) {
+					background-color: transparent;
+					padding: 0;
+					border: none;
+					cursor: pointer;
+					transition: opacity ease-out $tr;
 
-				&:hover {
-					opacity: 0.7
+					&:hover {
+						opacity: 0.7
+					}
 				}
 
 				.section-label {
@@ -262,6 +264,14 @@ body.memory-page-theme-military {
 				margin: -18px 0 0 -18px
 			}
 
+			&.section-content-last-fight .tmp-loader {
+				top: auto;
+				left: auto;
+				right: 16px;
+				bottom: 6px;
+				margin: 0
+			}
+
 			&:not(:last-child) {
 				margin-bottom: 10px
 			}
@@ -324,7 +334,7 @@ body.memory-page-theme-military {
 
 			&-text {
 				width: 100%;
-				height: 18px;
+				height: 19px;
 				font-family: $ff;
 				font-size: $fs-md;
 				line-height: $lh-4;
@@ -372,6 +382,10 @@ body.memory-page-theme-military {
 
 				&-add {
 					border-radius: $rad-advantage
+				}
+
+				&.section-content-form-np {
+					max-width: 413px
 				}
 			}
 
@@ -439,4 +453,13 @@ body.memory-page-theme-military {
 			background-color: $military;
 		}
 	}
+}
+
+// Last fight section always the last one.
+#last-fight .section-drag {
+	display: none !important
+}
+
+.section-content-np {
+	margin-bottom: 0
 }
