feat: add last military screen.

--- a/src/scss/components/vars/_colors.scss
+++ b/src/scss/components/vars/_colors.scss
@@ -4,6 +4,9 @@ $accent-on-color			: #C69A39;
 $accent-on-color-hover		: #AE8429;
 $accent-on-color-pressed	: #936E1A;
 $accent-04					: rgba(247, 185, 65, 0.40);
+$dark-yellow-alt			: #A98B48;
+
+$light-white				: #FDFEFF;
 
 $light-pink					: #C3A195;
 
