--- a/src/scss/pages/new-memory.scss
+++ b/src/scss/pages/new-memory.scss
@@ -13,6 +13,7 @@
 @import '../new-memory/step-4';
 @import '../new-memory/step-5';
 @import '../new-memory/step-6';
+@import '../new-memory/step-6-military';
 
 .new-memory {
 	flex-grow: 1;
