--- a/src/scss/new-memory/step-6-military.scss
+++ b/src/scss/new-memory/step-6-military.scss
@@ -45,6 +45,7 @@
 }
 
 .military-created-thumb {
+	position: relative;
 	width: 102px;
 	height: 102px;
 	border-radius: 50%;
@@ -53,8 +54,9 @@
 	img {
 		display: block;
 		width: 100%;
-		height: 100%;
-		object-fit: cover;
+		position: absolute;
+		top: 50%;
+		transform: translateY(-50%)
 	}
 }
 
