--- a/src/scss/new-memory/step-1.scss
+++ b/src/scss/new-memory/step-1.scss
@@ -1,3 +1,10 @@
+body.memory-page-theme-military {
+	#new-memory-step-1 .new-memory-step-desc,
+	.new-memory-langs {
+		display: none
+	}
+}
+
 .new-memory {
 	&-langs {
 		position: relative;
